# nexlog-ziti

./: LICENSE-ENTERPRISE  README.md
cli/: pyproject.toml
collector/: ziti.py
docs/: index.html
nexlog/: .gitignore  __init__.py
nexlog/cli/: main.py  nexlog.example.json
nexlog/parser/: parser.py
output/: handlers.py
site/: README.md
